--- a/OBN-Eng-Words-Admin.html
+++ b/OBN-Eng-Words-Admin.html
@@ -31,7 +31,7 @@
     </style>
 </head>
 <body>
-    <h1>דף מנהל - הוספת מילים</h1>
+    <h1>דף מנהל - הוספת מילים למשחק לימוד אנגלית</h1>
 
     <h2>הסבר</h2>
     <p>בתיבת הטקסט הראשונה, הכניסו צמדי מילים בכל שורה. כל מילה באנגלית ואחריה התרגום שלה בעברית.</p>
@@ -43,7 +43,7 @@
 
     <h2>פלט מוכן לשימוש</h2>
    <p>העתק את הקוד מכאן ושלב אותו בקוד של אפליקציית לימוד אנגלית:
-	<a href="OBN-Eng.html">OBN-Eng.html</a> באזור הקוד הזה:
+	<a href="OBN-Eng-03.html">OBN-Eng-03.html</a> באזור הקוד הזה:
 	</p>
 	<p dir="ltr">	        
 			const words = [ <br>
