--- a/OBN-Eng-Words-Admin.html
+++ b/OBN-Eng-Words-Admin.html
@@ -72,7 +72,7 @@
         document.getElementById('inputTextArea').addEventListener('input', convertInput);
 
         document.getElementById('returnButton').onclick = function() {
-            window.location.href = 'OBN-Eng.html';
+            window.location.href = 'OBN-Eng-03.html';
         };
     </script>
 </body>
