--- a/OBN-Eng-03.html
+++ b/OBN-Eng-03.html
@@ -23,13 +23,6 @@
             box-shadow: 0 10px 20px rgba(0,0,0,0.1);
             max-width: 400px;
             margin: 0 auto;
-			
-//			background-color: #ffffff;
-//            border-radius: 15px;
-//            padding: 20px;
-//            max-width: 500px;
-//            margin: 0 auto;
-//            box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
         #word-display {
             font-size: 24px;
@@ -110,6 +103,9 @@
             white-space: pre-line;
             margin-bottom: 15px;
         }
+		footer {
+           color: #4a90e2;
+        }
     </style>
 </head>
 <body>
@@ -149,6 +145,7 @@
 <!--
     <a id="admin-link" href="OBN-Eng-Words-Admin.html">הוסף מילים חדשות</a>
 -->	
+    <br><footer>Copyright OBN 2024</footer>
     <canvas id="confetti"></canvas>
 
     <script>
