--- a/OBN-Eng-03.html
+++ b/OBN-Eng-03.html
@@ -121,7 +121,7 @@
             <input type="checkbox" id="sound-checkbox" checked>
             <label for="sound-checkbox">הפעל סאונד במשחק</label>
         </div>
-		<a id="admin-link" href="OBN-Eng-Words-Admin.html">הוסף מילים חדשות</a>
+		<a id="admin-link" href="OBN-Eng-Words-Admin-01.html">הוסף מילים חדשות</a>
     </div>
     <div id="stats-container" style="display: none;">
         <h2>סטטיסטיקה</h2>
