--- a/index.html
+++ b/index.html
@@ -162,6 +162,10 @@
                 <td>ניהול הוצאות</td>
                 <td><a href="OBN-Expenses.html">קישור</a></td>
             </tr>            
+			<tr>
+                <td>ניהול הוצאות</td>
+                <td><a href="Budg/OBN-Budget-Split.html">קישור</a></td>
+            </tr>            			
 
         </tbody>
     </table>
