--- a/index.html
+++ b/index.html
@@ -162,14 +162,19 @@
                 <td>ניהול הוצאות</td>
                 <td><a href="OBN-Expenses.html">קישור</a></td>
             </tr>            
+			<tr>
+                <td>ניהול הוצאות 2</td>
+                <td><a href="Budg/OBN-Budget-Split.html">קישור</a></td>
+            </tr>            			
 
         </tbody>
     </table>
+	<br><br>
+		<footer>
+			כל הזכויות שמורות OBN 2024
+		</footer>
 </main>
 
-<footer>
-    כל הזכויות שמורות OBN 2024
-</footer>
 
 </body>
 </html>
