--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             </tr>            
 			<tr>
                 <td>ניהול הוצאות 2</td>
-                <td><a href="Budg/OBN-Budget-Split.html">קישור</a></td>
+                <td><a href="https://obn3.github.io/Budg/OBN-Budget-Split.html">קישור</a></td>
             </tr>            			
 
         </tbody>
