--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
                 <td><a href="OBN-Expenses.html">קישור</a></td>
             </tr>            
 			<tr>
-                <td>ניהול הוצאות 2</td>
-                <td><a href="https://obn3.github.io/Budg/OBN-Budget-Split.html">קישור</a></td>
+                <td>ניהול הוצאות משותפות</td>
+                <td><a href="OBN-Budget-Split.html">קישור</a></td>
             </tr>            			
 
         </tbody>
