--- a/index.html
+++ b/index.html
@@ -166,7 +166,10 @@
                 <td>ניהול הוצאות משותפות</td>
                 <td><a href="OBN-Budget-Split.html">קישור</a></td>
             </tr>            			
-
+			<tr>
+                <td>תמלול</td>
+                <td><a href="OBN_transcribe.html">קישור</a></td>
+            </tr>            			
         </tbody>
     </table>
 	<br><br>
