--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             </tr>            			
 			<tr>
                 <td>תמלול</td>
-                <td><a href="OBN_transcribe.html">קישור</a></td>
+                <td><a href="OBN-Transcribe.html">קישור</a></td>
             </tr>            			
         </tbody>
     </table>
