--- a/OBN-Transcribe.html
+++ b/OBN-Transcribe.html
@@ -194,12 +194,16 @@
         const help = `
             <b>ברוכים הבאים ל-OBN Transcribe!</b><br><br>
             כדי להשתמש באפליקציה:<br>
-            1. הזן את ה-API Key המלא שלך.<br>
-            2. בחר קובץ אודיו לתמלול. הגודל המקסימלי הוא 25MB.<br>
-            3. לחץ על "תמלול עם תזמון" כדי לקבל תמלול עם תזמונים (מתאים לכתוביות לסרטים, למשל), או על "תמלול כטקסט בלבד" לקבלת טקסט רגיל.<br>
-            4. המתן עד לסיום התמלול.<br>
+            1. צרו לעצמכם בחינם קוד 
+			<a href="https://console.groq.com/playground" target="_blank">ב-Groq</a> בתפריט API Keys<br>
+			2. שמרו את הקוד אצלכם והדביקו אותו בתיבת הקוד (לא לשתף עם אחרים!)<br>
+            3. בחרו מהמחשב או הטלפון קובץ אודיו לתמלול. הגודל המקסימלי הוא 25MB.<br>
+            3. לחצו על "תמלול עם תזמון" כדי לקבל תמלול עם תזמונים,<br>
+			שמתאים לכתוביות, למשל, או על "תמלול כטקסט בלבד" לקבלת טקסט ללא תזמון.<br>
+            4. המתינו עד לסיום התמלול.<br>
             5. לאחר סיום התמלול, תוכל להעתיק או להוריד את התמלול.<br><br>
-            שים לב: שמור על סודיות המפתח המלא שלך ואל תשתף אותו עם אף אחד.
+            שאלות? דברו איתי
+			<a href="mailto:ofirbn@post.com">במייל</a>
         `;
 
         window.onload = function() {
