--- a/index.html
+++ b/index.html
@@ -80,109 +80,93 @@
         <thead>
             <tr>
                 <th>שם הפרויקט</th>
-                <th>קישור</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>יצירת חתימה לשימוש במסמכים או תמונות</td>
-                <td><a href="OBN-Text-to-Sig.html">קישור</a></td>
+                <td><a href="OBN-Text-to-Sig.html">יצירת חתימה לשימוש במסמכים או תמונות</a></td>
             </tr>		
             <tr>
-                <td>הוספת חתימה על תמונות</td>
-                <td><a href="OBN-SIG.html">קישור</a></td>
+                <td><a href="OBN-SIG.html">הוספת חתימה על תמונות</a></td>
             </tr>
             <tr>
-                <td>לימוד אנגלית</td>
-                <td><a href="OBN-Eng.html">קישור</a></td>
+                <td><a href="OBN-Eng.html">לימוד אנגלית</a></td>
             </tr>		
             <tr>
-                <td>לימוד אנגלית 2</td>
-                <td><a href="OBN-Eng-02.html">קישור</a></td>
+                <td><a href="OBN-Eng-02.html">לימוד אנגלית 2</a></td>
             </tr>					
             <tr>
-                <td>לימוד אנגלית עם ממשק ניהול</td>
-                <td><a href="OBN-Eng-03.html">קישור</a></td>
+                <td><a href="OBN-Eng-03.html">לימוד אנגלית עם ממשק ניהול</a></td>
             </tr>								
-            <tr>			
-            <tr>
-                <td>משחק זכרון רגיל</td>
-                <td><a href="OBN-Mem-Game.html">קישור</a></td>
-            </tr>
-            <tr>
-                <td>משחק זכרון מתקדם</td>
-                <td><a href="OBN-Mem-Game-02.html">קישור</a></td>
-            </tr>			
-            <tr>
-                <td>מחשבון גיל ותאריך לידה עברי</td>
-                <td><a href="OBN-Birth.html">קישור</a></td>
-            </tr>
-            <tr>
-                <td>תזכורן ימי הולדת עם תאריך עברי</td>
-                <td><a href="OBN-Birthday-Heb.html">קישור</a></td>
-            </tr>
 			<tr>
-                <td>משחק ניחוש מילים</td>
-                <td><a href="OBN-Words-Encrypted.html">קישור</a></td>
-            </tr>            
-            <tr>
-                <td>גלגל המזל</td>
-                <td><a href="OBN-Fortune-Wheel.html">קישור</a></td>
-            </tr>
-            <tr>
-                <td>Advanced Color Picker</td>
-                <td><a href="OBN-Color-Picker.html">קישור</a></td>
-            </tr>			
+                <td><a href="OBN-Mem-Game.html">משחק זכרון רגיל</a></td>
+			</tr>			
+			<tr>
+                <td><a href="OBN-Mem-Game-02.html">משחק זכרון מתקדם</a></td>	
+			</tr>			
+			<tr>	
+				<td><a href="OBN-Birth.html">מחשבון גיל ותאריך לידה עברי</a></td>	
+			</tr>	
+			<tr>	
+				<td><a href="OBN-Birthday-Heb.html">תזכורן ימי הולדת עם תאריך עברי</a></td>	
+			</tr>	
+			<tr>	
+				<td><a href="OBN-Words-Encrypted.html">משחק ניחוש מילים</a></td>	
+			</tr>            
+			<tr>	
+				<td><a href="OBN-Fortune-Wheel.html">גלגל המזל</a></td>	
+			</tr>	
+			<tr>	
+				<td><a href="OBN-Color-Picker.html">Advanced Color Picker</a></td>	
+			</tr>			
+			<tr>	
+				<td><a href="Loneliness-mindmap-filter.html">מפת חשיבה: בדידות בקרב זקנים</a></td>	
+			</tr>	
+			<tr>	
+				<td><a href="activity-mindmap.html">מפת חשיבה: פעילות גופנית בקרב זקנים</a></td>	
+			</tr>	
+			<tr>	
+				<td><a href="persona-cards.html">דוגמה לכרטיס פרסונה</a></td>			
+			</tr>			
+			<tr>	
+				<td><a href="Health-Questionnaire.html">Health Questionnaire</a></td>		
+			</tr>		
+			<tr>		
+				<td><a href="Scores-Admin.html">אפליקציית ניקוד - חישוב הניקוד</a></td>		
+			</tr>		
+			<tr>		
+				<td><a href="OBN-Scores-Create-Groups-Admin.html">אפליקציית ניקוד - יצירת קובץ ניקוד</a></td>		
+			</tr>			
+			<tr>		
+				<td><a href="Scores-User.html">אפליקציית ניקוד - דוגמה לניקוד</a></td>						
+			</tr>
+			<tr>
+				<td><a href="OBN-Word-Encryptor.html">Word Encryptor</a></td>
+			</tr>
+			<tr>
+				<td><a href="OBN-Expenses.html">ניהול הוצאות</a></td>
+			</tr>
+			<tr>
+				<td><a href="OBN-Budget-Split.html">ניהול הוצאות משותפות</a></td>
+			</tr>
+			<tr>
+				<td><a href="OBN-Transcribe.html">תמלול</a></td>
+			</tr>
 
-            <tr>
-                <td>מפת חשיבה: בדידות בקרב זקנים</td>
-                <td><a href="Loneliness-mindmap-filter.html">קישור</a></td>
-            </tr>
-            <tr>
-                <td>מפת חשיבה: פעילות גופנית בקרב זקנים</td>
-                <td><a href="activity-mindmap.html">קישור</a></td>
-            </tr>
-            <tr>
-                <td>דוגמה לכרטיס פרסונה</td>
-                <td><a href="persona-cards.html">קישור</a></td>
-            </tr>			
-         <tr>
-                <td>Health Questionnaire</td>
-                <td><a href="Health-Questionnaire.html">קישור</a></td>
-            </tr>
-         <tr>
-                <td>אפליקציית ניקוד וניהול</td>
-                <td><a href="Scores-Admin.html">ניהול</a> |  <a href="Scores-User.html">ניקוד</a> </td>
-            </tr>
-         <tr>
-                <td>אפליקציית ניקוד וניהול 2</td>
-                <td><a href="OBN-Scores-Create-Groups-Admin.html">ניהול</a> |  <a href="Scores-User.html">ניקוד</a> </td>
-            </tr>			
-			<tr>
-                <td>Word Encryptor</td>
-                <td><a href="OBN-Word-Encryptor.html">קישור</a></td>
-            </tr>            
-			<tr>
-                <td>ניהול הוצאות</td>
-                <td><a href="OBN-Expenses.html">קישור</a></td>
-            </tr>            
-			<tr>
-                <td>ניהול הוצאות משותפות</td>
-                <td><a href="OBN-Budget-Split.html">קישור</a></td>
-            </tr>            			
-			<tr>
-                <td>תמלול</td>
-                <td><a href="OBN-Transcribe.html">קישור</a></td>
-            </tr>            			
         </tbody>
     </table>
-	<br><br>
-		<footer>
-			כל הזכויות שמורות OBN 2024
-		</footer>
-	<br><br>		
-</main>
+
+    <br><br>
+
+    <footer>
+     כל הזכויות שמורות OBN 2024
+    </footer>
+
+    <br><br>
+
+ </main>
 
 
-</body>
-</html>
+ </body>
+
+ </html>
