--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
 			<tr>
 				<td><a href="OBN-Transcribe.html">תמלול</a></td>
 			</tr>
+			<tr>
+				<td><a href="OBN-Mindmap-Groq.html">יצירת מפת חשיבה</a></td>
+			</tr>			
 
         </tbody>
     </table>
