--- a/OBN-Mindmap-Groq.html
+++ b/OBN-Mindmap-Groq.html
@@ -221,8 +221,8 @@
         1. צרו לעצמכם בחינם קוד 
         <a href="https://console.groq.com/playground" target="_blank">ב-Groq</a> בתפריט API Keys (תצטרכו להירשם חינם).<br>
         2. שמרו את הקוד אצלכם והדביקו אותו בתיבת הקוד (לא לשתף עם אחרים!)<br>
-        3. הזינו מושג ממנו תרצו לבנות מפת חשיבה.<br>
-        3. הקישו על "צור מפת חשיבה" והמתינו/<br>
+        3. הזינו מושג ממנו תרצו לבנות מפת חשיבה. שימו לב! מושג קצר, בן מילה-שלוש<br>
+        3. הקישו על "צור מפת חשיבה" והמתינו :)<br>
         4. שחקו עם הפרמטרים של המפה, שנמצאים מתחת למפה/<br>
         5. תוכלו להציג את הרשימה בפורמט רשימה או JSON (לתוכנות אחרות)/<br>
 		6. תוכלו להעתיק גם את תמונת מפת החשיבה וגם את טקסט הרשימה ולהדביק בוורד או פרורפוינט, למשל.<br><br>
