--- a/OBN-Mindmap-Groq.html
+++ b/OBN-Mindmap-Groq.html
@@ -446,7 +446,8 @@
 //                  nodeSpacing: 150
 					levelSeparation: levelSeparation,
 					nodeSpacing: nodeSpacing,
-					treeSpacing: treeSpacing					
+					treeSpacing: treeSpacing,
+					shakeTowards: 'leaves' // או 'roots' לכיוון ההפוך					
                 } : false
             },
             physics: enablePhysics ? {
