--- a/OBN-Mindmap-Groq.html
+++ b/OBN-Mindmap-Groq.html
@@ -233,7 +233,7 @@
     const apiKeyInput = document.getElementById('api-key');
     const generateBtn = document.getElementById('generate-btn');
     const help = `
-        <b>ברוכים הבאים ל-OBN Transcribe!</b><br><br>
+        <b>ברוכים הבאים ל-OBN MindMap!</b><br><br>
         כדי להשתמש באפליקציה:<br>
         1. צרו לעצמכם בחינם קוד 
         <a href="https://console.groq.com/playground" target="_blank">ב-Groq</a> בתפריט API Keys (תצטרכו להירשם חינם).<br>
