--- a/index.html
+++ b/index.html
@@ -155,7 +155,9 @@
 			<tr>
 				<td><a href="OBN-Mindmap-Groq.html">יצירת מפת חשיבה</a></td>
 			</tr>			
-
+			<tr>
+				<td><a href="OBN-Mindmaps-Engine.html">יצירת מפת חשיבה - גירסה 2</a></td>
+			</tr>			
         </tbody>
     </table>
 
