--- a/OBN-Mindmaps-Engine.html
+++ b/OBN-Mindmaps-Engine.html
@@ -260,15 +260,12 @@
         1. צרו לעצמכם בחינם קוד 
         <a href="https://console.groq.com/playground" target="_blank">ב-Groq</a> בתפריט API Keys<br>
         2. שמרו את הקוד אצלכם והדביקו אותו בתיבת הקוד (לא לשתף עם אחרים!)<br>
-        3. בחרו מהמחשב או הטלפון קובץ אודיו לתמלול. הגודל המקסימלי הוא 25MB.<br>
-        3. לחצו על "תמלול עם תזמון" כדי לקבל תמלול עם תזמונים,<br>
-        שמתאים לכתוביות, למשל, או על "תמלול כטקסט בלבד" לקבלת טקסט ללא תזמון.<br>
-        4. המתינו עד לסיום התמלול.<br>
-        5. לאחר סיום התמלול, תוכל להעתיק או להוריד את התמלול.<br><br>
-        טמפרטורה: מידת היצירתיות של המודל. 0.7 זה ממוצע. אפשר להתנסות עם אפשרויות אחרות.<br><br>
-        רמות עומק: האם רוצים לקבל רק רמת ראשונה של מושגים ראשיים, או רמה שניה של נושאים או רמה שלישית של תתי-נושאים.<br><br>
-        שאלות? דברו איתי
-        <a href="mailto:ofirbn@post.com">במייל</a>
+        3. הזינו את המושג לו אתם מבקשים ליצור מפת חשיבה. מילה עד 3 מילים.<br>
+        3. בחרו מודל ai. נסו מודלים שונים כדי להתנסות עם תוצאות אחרות.<br>
+        4. בחרו רמות עומק: אפשר קבל רמת ראשונה של מושגים ראשיים, או רמת עומק שניה של נושאים או רמה שלישית של תתי-נושאים.<br>
+		5. לא עבד בפעם הראשונה? יש הודעת שגיאה? נסו שוב!<br>
+		6. אפשר לבחור טמפרטורה: מידת היצירתיות של המודל. 0.7 זה ממוצע.<br><br>
+        שאלות? דברו איתי <a href="mailto:ofirbn@post.com">במייל</a>
     `;
 
     document.addEventListener('DOMContentLoaded', function() {
