--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
         </thead>
         <tbody>
             <tr>
+                <td><a href="OBN-Text-to-Sig-Full.html">יצירת חתימה והוספה לתמונה או מסמך, גרסה 2</a></td>
+            </tr>							
+            <tr>
                 <td><a href="OBN-Text-to-Sig.html">יצירת חתימה לשימוש במסמכים או תמונות</a></td>
             </tr>		
             <tr>
